--- a/src/main/resources/templates/admin/add_staff.html
+++ b/src/main/resources/templates/admin/add_staff.html
@@ -3,24 +3,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}" >
-    <title>Preclinic - Ajouter Staff</title>
+    <title>Preclinic - Ajouter un employé</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" >
     <link rel="stylesheet" th:href="@{/css/style.css}" >
-    <!--/*@thymesVar id="staff" type="com.jee.clinicmanagementsystem.entity.Staff"*/-->
-</head>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/select2.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datetimepicker.min.css}">
 
+</head>
+<!--/*@thymesVar id="staff" type="com.jee.clinicmanagementsystem.entity.Staff"*/-->
 <body>
 <div class="main-wrapper">
     <div class="header">
         <div class="header-left">
             <a href="index-2.html" class="logo">
-                <img src="assets/img/logo.png" width="35" height="35" alt=""> <span>Preclinic</span>
+                <img th:src="@{/img/logo.png}" width="35" height="35" alt=""> <span>Preclinic</span>
             </a>
         </div>
         <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
@@ -38,7 +41,7 @@
                                 <a href="activities.html">
                                     <div class="media">
 											<span class="avatar">
-												<img alt="John Doe" src="assets/img/user.jpg" class="img-fluid rounded-circle">
+												<img alt="John Doe" src="assets/img/user.jpg" class="img-fluid">
 											</span>
                                         <div class="media-body">
                                             <p class="noti-details"><span class="noti-title">John Doe</span> added new task <span class="noti-title">Patient appointment booking</span></p>
@@ -103,8 +106,10 @@
             </li>
             <li class="nav-item dropdown has-arrow">
                 <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
-                        <span class="user-img"><img class="rounded-circle" src="assets/img/user.jpg" width="40" alt="Admin">
-							<span class="status online"></span></span>
+                        <span class="user-img">
+							<img class="rounded-circle" th:src="@{/img/user.jpg}" width="24" alt="Admin">
+							<span class="status online"></span>
+						</span>
                     <span>Admin</span>
                 </a>
                 <div class="dropdown-menu">
@@ -116,7 +121,7 @@
             </li>
         </ul>
         <div class="dropdown mobile-user-menu float-right">
-            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
             <div class="dropdown-menu dropdown-menu-right">
                 <a class="dropdown-item" href="profile.html">My Profile</a>
                 <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
@@ -125,92 +130,66 @@
             </div>
         </div>
     </div>
+    <!-- menu here -->
     <div th:replace="/includes/admin_side_menu :: admin_side_menu"> </div>
     <div class="page-wrapper">
         <div class="content">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h4 class="page-title">Ajouter Un Staff</h4>
+                    <h4 class="page-title">Ajouter un employé</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <form th:action="@{/addstaff}" th:object="${staff}">
+                    <form th:action="@{/admin/addstaff}" th:object="${staff}" method="post">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Prénom <span class="text-danger">*</span></label>
-                                    <input class="form-control" type="text" th:field="*{first_name}">
+                                    <label>Prénom :<span class="text-danger">*</span></label>
+                                    <input class="form-control" th:field="*{firstName}" type="text" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Nom</label>
-                                    <input class="form-control" type="text" th:field="*{last_name}">
+                                    <label>Nom :<span class="text-danger">*</span></label>
+                                    <input class="form-control"  th:field="*{lastName}" type="text" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Email <span class="text-danger">*</span></label>
-                                    <input class="form-control" type="text" th:field="*{email}">
+                                    <label>Email :<span class="text-danger">*</span></label>
+                                    <input class="form-control" th:field="*{email}" type="email" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>N° de matricule: <span class="text-danger">*</span></label>
-                                    <input class="form-control" type="number" th:field="*{matricule_number}">
+                                    <label>Password : <span class="text-danger">*</span></label>
+                                    <input class="form-control" th:field="*{password}" type="password" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Mot de passe </label>
-                                    <input class="form-control" type="password"  th:field="*{password}">
+                                    <label>Matricule :<span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" th:field="*{matriculeNumber}" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Confirmer le mot de passe</label>
-                                    <input class="form-control" type="password">
+                                    <label>Numero de téléphone :</label>
+                                    <input class="form-control" th:field="*{phoneNumber}" type="text" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label>Numero de telephone</label>
-                                    <div class="cal-icon">
-                                        <input type="text" th:field="*{phone_number}" >
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group gender-select">
-                                    <label class="gen-label">Role:</label>
-                                    <div class="form-check-inline">
-                                        <label class="form-check-label">
-                                            <input type="radio" th:field="*{role}" value="GP" class="form-check-input">Getionnaire de patients
-                                        </label>
-                                    </div>
-                                    <div class="form-check-inline">
-                                        <label class="form-check-label">
-                                            <input type="radio" th:field="*{role}" value="MED" class="form-check-input">Medecin
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Avatar</label>
-                                    <div class="profile-upload">
-                                        <div class="upload-img">
-                                            <img alt="" src="assets/img/user.jpg">
-                                        </div>
-                                        <div class="upload-input">
-                                            <input type="file" class="form-control">
-                                        </div>
-                                    </div>
+                                    <label>Role</label>
+                                    <select class="select" th:field="*{role}">
+                                        <option th:value="'GP'">Gp</option>
+                                        <option th:value="'MED'">Medécin</option>
+                                        <option th:value="'ADMIN'">Admin</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
-
                         <div class="m-t-20 text-center">
                             <button class="btn btn-primary submit-btn">Ajouter</button>
                         </div>
@@ -434,13 +413,13 @@
 <script th:src="@{/js/popper.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
 <script th:src="@{/js/jquery.slimscroll.js}"></script>
+<script th:src="@{/js/app.js}"></script>
 <script th:src="@{/js/select2.min.js}"></script>
 <script th:src="@{/js/moment.min.js}"></script>
 <script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
-<script th:src="@{/js/app.js}"></script>
 
 </body>
 
 
-<!-- add-patient24:07-->
+
 </html>
