add update patient

--- a/src/main/resources/templates/gp/add-patient.html
+++ b/src/main/resources/templates/gp/add-patient.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org">
 
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}" >
-    <title>Preclinic - Modifier un employé</title>
+    <title>Preclinic - Ajouter un patient</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" >
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datetimepicker.min.css}">
 
 </head>
-<!--/*@thymesVar id="staff" type="com.jee.clinicmanagementsystem.entity.Staff"*/-->
+<!--/*@thymesVar id="patient" type="com.jee.clinicmanagementsystem.entity.Patient"*/-->
 <body>
 <div class="main-wrapper">
     <div class="header">
@@ -130,69 +130,83 @@
         </div>
     </div>
     <!-- menu here -->
-    <div th:replace="/includes/admin_side_menu :: admin_side_menu"> </div>
+    <div th:replace="/includes/gp_side_menu :: gp_side_menu"> </div>
     <div class="page-wrapper">
         <div class="content">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h4 class="page-title">Employé à modifier </h4>
+                    <h4 class="page-title">Ajouter un patient</h4>
                 </div>
             </div>
-           <div class="row">
+            <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <form method="POST" th:action="@{/admin/editstaff}" th:object="${staff}" >
+                    <form th:action="@{/gp/addpatient}" th:object="${patient}" method="post">
                         <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Prénom :<span class="text-danger">*</span></label>
-                                    <input class="form-control" th:field="*{firstName}" type="text" required>
-                                    <input  th:field="*{id}" type="hidden" required>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label>Prénom :<span class="text-danger">*</span></label>
+                                        <input class="form-control"  th:field="*{firstName}" type="text">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Nom :<span class="text-danger">*</span></label>
-                                    <input class="form-control"  th:field="*{lastName}" type="text" required>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label>Nom :<span class="text-danger">*</span></label>
+                                        <input class="form-control" th:field="*{lastName}" type="text">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Email :<span class="text-danger">*</span></label>
-                                    <input class="form-control" th:field="*{email}" type="email" required>
+                               
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label>Email <span class="text-danger">*</span></label>
+                                        <input class="form-control" th:field="*{email}" type="email">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Password : <span class="text-danger">*</span></label>
-                                    <input class="form-control" th:field="*{password}" type="password" required>
+								<div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label>date de naissance :<span class="text-danger">*</span></label>
+                                        <div class="cal-icon">
+                                            <input type="text" th:field="*{dateOfBirth}" class="form-control datetimepicker">
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Matricule :<span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" th:field="*{matriculeNumber}" required>
+                                <div class="col-sm-6">
+									<div class="form-group gender-select">
+										<label class="gen-label">Sexe:</label>
+										<div class="form-check-inline">
+											<label class="form-check-label">
+												<input type="radio" th:field="*{sex}" class="form-check-input" value="Homme">Homme
+											</label>
+										</div>
+										<div class="form-check-inline">
+											<label class="form-check-label">
+												<input type="radio" th:field="*{sex}" class="form-check-input" value="Femme">Femme
+											</label>
+										</div>
+									</div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Numero de téléphone :</label>
-                                    <input class="form-control" th:field="*{phoneNumber}" type="text" required>
+								<div class="col-sm-12">
+									<div class="row">
+										<div class="col-sm-12">
+											<div class="form-group">
+												<label>Address</label>
+												<input type="text" class="form-control " th:field="*{adress}">
+											</div>
+										</div>
+										
+									</div>
+								</div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label>Phone </label>
+                                        <input class="form-control" th:field="*{phoneNumber}" type="text">
+                                    </div>
                                 </div>
+                               
                             </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label>Role</label>
-                                    <select class="select" th:field="*{role}">
-                                        <option th:value="'GP'">Gp</option>
-                                        <option th:value="'MED'">Medécin</option>
-                                        <option th:value="'ADMIN'">Admin</option>
-                                    </select>
-                                </div>
+                          
+                            <div class="m-t-20 text-center">
+                                <button class="btn btn-primary submit-btn">Ajouter</button>
                             </div>
-                        </div>
-                        <div class="m-t-20 text-center">
-                            <button class="btn btn-primary submit-btn">Modifier</button>
-                        </div>
                     </form>
                 </div>
             </div>
