--- a/src/main/resources/templates/gp/patients_list.html
+++ b/src/main/resources/templates/gp/patients_list.html
@@ -14,54 +14,19 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" >
     <link rel="stylesheet" th:href="@{/css/style.css}" >
+    <link rel="stylesheet" type="text/css" th:href="@{/css/select2.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datetimepicker.min.css}">
 
 </head>
 
 <body>
 <div class="main-wrapper">
-    <!-- header here 
-        <div th:replace="/includes/header :: header"> 
-    -->
-     <div class="header" th:fragment="header">
-        <div class="header-left">
-            <a href="index-2.html" class="logo">
-                <img th:src="@{/img/logo.png}" width="35" height="35" alt=""> <span>Preclinic</span>
-            </a>
-        </div>
-        <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars"></i></a>
-        <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
-        <ul class="nav user-menu float-right">
-            <li class="nav-item dropdown has-arrow">
-                <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
-                        <span class="user-img">
-							<img class="rounded-circle" th:src="@{/img/user.jpg}" width="24" alt="Admin">
-							<span class="status online"></span>
-						</span>
-                    <!-- <span  th:text="${staffinfo.firstName}" >Gp</span> -->
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="profile.html">My Profile</a>
-                    <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
-                    <a class="dropdown-item" href="settings.html">Settings</a>
-                    <a class="dropdown-item" href="login.html">Logout</a>
-                </div>
-            </li>
-        </ul>
-        <div class="dropdown mobile-user-menu float-right">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-            <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="profile.html">My Profile</a>
-                <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
-                <a class="dropdown-item" href="settings.html">Settings</a>
-                <a class="dropdown-item" href="login.html">Logout</a>
-            </div>
-        </div>
-    </div>
-    
+    <div th:replace="/includes/header :: header"> </div>
     <!-- menu here -->
     <div th:replace="/includes/gp_side_menu :: gp_side_menu"> </div>
     <div class="page-wrapper">
         <div class="content">
+       
         <h1>Patients list</h1>
          <table border="1">
 		    	<thead>
@@ -88,7 +53,7 @@
 		    			<td th:text= "${patient.Sex}"> </td>
 		    			<td th:text= "${patient.DateOfBirth}"> </td>
 		    			<td > 
-		    				<a th:href="@{'gp/deletepatient/' + ${patient.id}}">Delete</a>
+		    				<a th:href="@{'deletepatient/' + ${patient.id}}">Delete</a>
 		    			</td>
 		    		
 		    		</tr>
@@ -101,7 +66,8 @@
 </div>
 <!-- menu here -->
     
-   
+</div>
+
 	
 		    
 		    
@@ -110,10 +76,10 @@
 <script th:src="@{/js/popper.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
 <script th:src="@{/js/jquery.slimscroll.js}"></script>
-<script th:src="@{/js/Chart.bundle.js}"></script>
-<script th:src="@{/js/chart.js}"></script>
 <script th:src="@{/js/app.js}"></script>
-
+<script th:src="@{/js/select2.min.js}"></script>
+<script th:src="@{/js/moment.min.js}"></script>
+<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
 
 
 </body>
