--- a/src/main/resources/templates/admin/staff_list.html
+++ b/src/main/resources/templates/admin/staff_list.html
@@ -22,7 +22,8 @@
     <div th:replace="/includes/admin_side_menu :: admin_side_menu"> </div> 
     <div class="page-wrapper">
         <div class="content">
-		    <table border="1">
+        <h1>Staff List</h1>
+		    <table border="1" class="table table-striped custom-table mb-0 datatable">
 		    	<thead>
 		    		<tr>
 		    			<th>Staff ID</th>
