--- a/src/main/resources/templates/includes/gp_side_menu.html
+++ b/src/main/resources/templates/includes/gp_side_menu.html
@@ -7,7 +7,7 @@
                     <a href="index-2.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="doctors.html"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
+                    <a onclick='redirect()'><i class="fa fa-user-md"></i> <span>tous les RDVs</span></a>
                 </li>
                 <li>
                     <a href="patients.html"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
@@ -160,4 +160,18 @@
             </ul>
         </div>
     </div>
+    <script>
+function redirect() {
+	
+	var today = new Date();
+	var dd = String(today.getDate()).padStart(2, '0');
+	var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+	var yyyy = today.getFullYear();
+	today = yyyy+ '-' + mm + '-' + dd ;
+	window.location.href = "../../gp/rdvs/"+today;
+	//window.location.href = "/";
+}
+	
+	
+</script>
 </div>
