--- a/src/main/resources/templates/med/my-rdvs.html
+++ b/src/main/resources/templates/med/my-rdvs.html
@@ -68,6 +68,9 @@
 									
 								</tbody>
 							</table>
+							<div class="alert alert-dark text-center" style=""
+							 th:if="${rdvs.empty}"><strong>pas de rendez-vous !</strong>
+							 </div>
 						</div>
 					</div>
                 </div>
