--- a/src/main/resources/templates/gp/all-rdv.html
+++ b/src/main/resources/templates/gp/all-rdv.html
@@ -51,30 +51,34 @@
 								</thead>
 								<tbody>
 								
-								<tr th:each="rdv : ${rdvs}" th:id="${rdv.id}">
-								     <td th:text="${rdv.gpId}"> </td>
-								      <td th:text="${rdv.medId}"> </td>
-								     <td th:text="${rdv.rdvDate}"> </td>
-								     <td th:text="${rdv.rdvTime}"> </td>
-								     <td th:switch="${rdv.status}">
-								         <span th:case="1"class="custom-badge status-red">Inactive</span>
-								         <span th:case="0"class="custom-badge status-green">Active</span>
-								     </td>
-								     <td class="text-right">
-											<div class="dropdown dropdown-action">
-												<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-												<div class="dropdown-menu dropdown-menu-right">
-													<a class="dropdown-item" href="edit-appointment.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-													<a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_appointment"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+									<tr  th:each="rdv : ${rdvs}" th:id="${rdv.id}">
+									     <td th:text="${rdv.gpId}"> </td>
+									      <td th:text="${rdv.medId}"> </td>
+									     <td th:text="${rdv.rdvDate}"> </td>
+									     <td th:text="${rdv.rdvTime}"> </td>
+									     <td th:switch="${rdv.status}">
+									         <span th:case="1"class="custom-badge status-red">Inactive</span>
+									         <span th:case="0"class="custom-badge status-green">Active</span>
+									     </td>
+									     <td class="text-right">
+												<div class="dropdown dropdown-action">
+													<a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
+													<div class="dropdown-menu dropdown-menu-right">
+														<a class="dropdown-item" href="edit-appointment.html"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+														<a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_appointment"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+													</div>
 												</div>
-											</div>
-									</td>
-								   </tr>
+										</td>
+								  
+								   
 								   
 									
 									
 								</tbody>
 							</table>
+							<div class="alert alert-dark text-center" style=""
+							 th:if="${rdvs.empty}"><strong>pas de rendez-vous !</strong>
+							 </div>
 						</div>
 					</div>
                 </div>
