doctor controller to med controller

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" >
     <link rel="stylesheet" th:href="@{/css/style.css}" >
+    
 
 </head>
 
@@ -22,6 +23,53 @@
         <div th:replace="/includes/admin_side_menu :: admin_side_menu"> </div>
         <div class="page-wrapper">
             <div class="content">
+            <div class="row mb-3">
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card bg-success text-white h-100">
+                        <div class="card-body bg-success">
+                            <div class="rotate">
+                              <i class="fa fa-user-md fa-4x"></i>
+                            </div>
+                            <h6 class="text-uppercase">Doctors</h6>
+                            <h1 class="display-4">34</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-danger h-100">
+                        <div class="card-body bg-danger">
+                            <div class="rotate">
+								<i class="fa fa-wheelchair fa-4x"></i>                         
+							</div>
+                            <h6 class="text-uppercase">Patients</h6>
+                            <h1 class="display-4">87</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-info h-100">
+                        <div class="card-body bg-info">
+                            <div class="rotate">
+								<i class="fa fa-calendar fa-4x"></i>        
+							</div>
+                            <h6 class="text-uppercase">Appointments</h6>
+                            <h1 class="display-4">125</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6 py-2">
+                    <div class="card text-white bg-warning h-100">
+                        <div class="card-body">
+                            <div class="rotate">
+                                <i class="fa fa-hospital-o fa-4x"></i>                           
+                            </div>
+                            <h6 class="text-uppercase">Departments</h6>
+                            <h1 class="display-4">14</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/row-->
         	</div>
         </div>
     </div>
