--- a/src/main/resources/templates/doctors_bydepartment.html
+++ b/src/main/resources/templates/doctors_bydepartment.html
@@ -57,7 +57,7 @@
     <div class="page-wrapper">
         <div class="content">
          <div  class="col-sm-5 col-5">
-        	<h1>Staff List</h1>
+        	<h1>Doctors</h1>
         </div>
 		    <!--<table border="1">
 		    	<thead>
