--- a/src/main/resources/templates/includes/admin_side_menu.html
+++ b/src/main/resources/templates/includes/admin_side_menu.html
@@ -7,11 +7,11 @@
                     <a href="index-2.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="doctors.html"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
+                    <a href="/listdoctors"><i class="fa fa-user-md"></i> <span>Doctors</span></a>
                 </li>
-                <li>
-                    <a href="patients.html"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
-                </li>
+                <!--<li>
+                     <a href="/listpatients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
+                </li> -->
                 <li>
                     <a href="appointments.html"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
                 </li>
@@ -19,7 +19,7 @@
                     <a href="schedule.html"><i class="fa fa-calendar-check-o"></i> <span>Doctor Schedule</span></a>
                 </li>
                 <li>
-                    <a href="departments.html"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
+                    <a href="/listdepartments"><i class="fa fa-hospital-o"></i> <span>Departments</span></a>
                 </li>
                 <li class="submenu">
                     <a href="#"><i class="fa fa-user"></i> <span> Employees </span> <span class="menu-arrow"></span></a>
@@ -47,7 +47,7 @@
                         <li><a href="salary-view.html"> Payslip </a></li>
                     </ul>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="chat.html"><i class="fa fa-comments"></i> <span>Chat</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
                 </li>
                 <li class="submenu">
@@ -154,9 +154,9 @@
                         </li>
                         <li>
                             <a href="javascript:void(0);"><span>Level 1</span></a>
-                        </li>
+                        </li> 
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
