--- a/src/main/resources/templates/includes/gp_side_menu.html
+++ b/src/main/resources/templates/includes/gp_side_menu.html
@@ -1,5 +1,6 @@
+
 <div class="sidebar" id="sidebar" th:fragment="gp_side_menu">
-    <div class="sidebar-inner slimscroll">
+     <div class="sidebar-inner slimscroll">
         <div id="sidebar-menu" class="sidebar-menu">
             <ul>
                 <li class="menu-title">Main</li>
@@ -160,4 +161,52 @@
             </ul>
         </div>
     </div>
+     <!-- <aside id="side-menu" class="aside" role="navigation">            
+        <ul class="nav nav-list accordion">                    
+          <li class="nav-header">
+            <div class="link"><i class="fa fa-lg fa-globe"></i>Portal<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+              <li><a href="#">Dashboard</a></li>  
+              <li><a href="#">Settings</a></li>  
+              <li><a href="#">Administration</a></li>  
+            </ul>
+          </li>
+          
+          <li class="nav-header">
+            <div class="link"><i class="fa fa-lg fa-users"></i>Users<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+              <li><a href="#">Users</a></li>
+              <li><a href="#">New User</a></li>
+            </ul>
+          </li>
+          
+          <li class="nav-header">
+            <div class="link"><i class="fa fa-cloud"></i>Sites<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+              <li><a href="#">Search Sites</a></li>
+              <li><a href="#">New Site</a></li>
+              <li><a href="#">Jobs</a></li>
+            </ul>
+          </li>  
+          
+           <li class="nav-header">
+            <div class="link"><i class="fa fa-lg fa-map-marker"></i>Zones<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+              <li><a href="#">Search Zones</a></li>
+              <li><a href="#">New Zone</a></li>
+            </ul>
+          </li>
+          
+          <li class="nav-header">
+            <div class="link"><i class="fa fa-lg fa-file-image-o"></i>Reports<i class="fa fa-chevron-down"></i></div>
+            <ul class="submenu">
+              <li><a href="#">Entries</a></li> 
+              <li><a href="#">Redirects</a></li> 
+              <li><a href="#">Pingbacks</a></li>          
+              <li><a href="#">Tags</a></li>
+            </ul>
+          </li>
+          
+      </ul>
+  </aside>-->
 </div>
