rdv last commit

--- a/src/main/resources/templates/gp/all-rdv.html
+++ b/src/main/resources/templates/gp/all-rdv.html
@@ -135,7 +135,13 @@
 		    return [year, month, day].join('-');
 		}
 		
-		
+
+		$("tbody tr").click(function() {
+            if($(this).attr('id')){
+            	
+                window.location = "../rdv/"+$(this).attr('id');
+            }
+        });
 		
 	});
 </script>
