--- a/src/main/resources/templates/includes/med_side_menu.html
+++ b/src/main/resources/templates/includes/med_side_menu.html
@@ -171,7 +171,7 @@ function redirect() {
 	var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
 	var yyyy = today.getFullYear();
 	today = yyyy+ '-' + mm + '-' + dd ;
-	window.location.href = "../../med/rdv/"+today;
+	window.location.href = "../../med/rdvs/"+today;
 }
 	
 	
