--- a/src/main/resources/templates/gp/all-rdv.html
+++ b/src/main/resources/templates/gp/all-rdv.html
@@ -52,7 +52,7 @@
 								<tbody>
 								
 									<tr  th:each="rdv : ${rdvs}" th:id="${rdv.id}">
-									     <td th:text="${rdv.gpId}"> </td>
+									     <td th:text="${rdv.patientId}"> </td>
 									      <td th:text="${rdv.medId}"> </td>
 									     <td th:text="${rdv.rdvDate}"> </td>
 									     <td th:text="${rdv.rdvTime}"> </td>
