--- a/src/main/resources/templates/includes/gp_side_menu.html
+++ b/src/main/resources/templates/includes/gp_side_menu.html
@@ -5,13 +5,13 @@
             <ul>
                 <li class="menu-title">Main</li>
                 <li class="active">
-                    <a href="index-2.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                    <a href="/gp/"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
                 <li>
                     <a onclick='redirect()'><i class="fa fa-user-md"></i> <span>tous les RDVs</span></a>
                 </li>
                 <li>
-                    <a href="patients.html"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
+                    <a href="/gp/listpatients"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
                 </li>
                 <li>
                     <a href="appointments.html"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
@@ -48,7 +48,7 @@
                         <li><a href="salary-view.html"> Payslip </a></li>
                     </ul>
                 </li>
-                <li>
+               <!-- <li>
                     <a href="chat.html"><i class="fa fa-comments"></i> <span>Chat</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
                 </li>
                 <li class="submenu">
@@ -59,7 +59,7 @@
                         <li><a href="incoming-call.html">Incoming Call</a></li>
                     </ul>
                 </li>
-                <li class="submenu">
+                 <li class="submenu">
                     <a href="#"><i class="fa fa-envelope"></i> <span> Email</span> <span class="menu-arrow"></span></a>
                     <ul style="display: none;">
                         <li><a href="compose.html">Compose Mail</a></li>
@@ -157,7 +157,7 @@
                             <a href="javascript:void(0);"><span>Level 1</span></a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
