--- a/src/main/resources/templates/gp/rdv-details.html
+++ b/src/main/resources/templates/gp/rdv-details.html
@@ -36,14 +36,20 @@
 								</span>
                             </h3>
                              <div class="" style="font-size:19px">
-                                                 <span class=" ml-4">
+                                                <span class=" ml-2">
                                                     <span class="title">Date:</span>
-                                                    <span class="text">2020-15-12</span>
+                                                    <span class="text" th:text="${rdv.rdvDate}"></span>
                                                 </span>
-                                                <span class="float-right mr-5">
+                                                <span class="float-right mr-2">
                                                     <span class="title bold">heure:</span>
-                                                    <span class="text">15:50</span>
+                                                    <span class="text" th:text="${rdv.rdvTime}"></span>
                                                 </span>
+                                                <hr>
+                                                <span style="font-size:15px">
+                                               
+                                                <span class="title">Medécin:</span>
+                                                 <span class="text" th:text="${rdv.doc.firstName+' '+rdv.doc.LastName}"></span>
+                           							 </span>
                             </div>
                             
                         </div>
@@ -59,33 +65,34 @@
                                 <div class="profile-basic">
                                     <div class="row">
                                         <div class="col-md-0">
-
-                                            <div class="profile-info-left "style="height: 100%">
-                                                
+                                            <div class="profile-info-left "style="height: 100%;">
+                                            		
+                                                  
                                             </div>
                                         </div>
                                         <div class="col-md-7">
                                             <ul class="personal-info">
-                                                <li><h4 class="user-name" >Cristina Groves</h4></li>
+                                                <li><h4 class="user-name" th:text="${rdv.patient.firstName+' '+rdv.patient.LastName}"></h4></li>
                                                 <li>
                                                     <span class="title">Age:</span>
-                                                    <span class="text">26</span>
+                                                    <span class="text" id="age"></span>
                                                 </li>
                                                 <li>
-                                                    <span class="title">Gender:</span>
-                                                    <span class="text">Female</span>
+                                                    <span class="title">Sexe:</span>
+                                                    <span class="text" th:text="${rdv.patient.sex}"></span>
                                                 </li>
                                                 <li>
-                                                    <span class="title">Phone:</span>
-                                                    <span class="text"><a href="#">770-889-6484</a></span>
+                                                    <span class="title">Téléphone:</span>
+                                                    <span class="text"><a th:text="${rdv.patient.phoneNumber}"></a></span>
                                                 </li>
                                                 <li>
                                                     <span class="title">Email:</span>
-                                                    <span class="text"><a href="#">cristinagroves@example.com</a></span>
+                                                    <span class="text"><a th:text="${rdv.patient.phoneNumber}"></a></span>
                                                 </li>
                                                 <li>
                                                     <span class="title">Address:</span>
-                                                    <span class="text">714 Burwell Heights Road, Bridge City, TX, 77611</span>
+                                                    <span class="text" th:text="${rdv.patient.adress}"></span>
+                                                	
                                                 </li>
                                             </ul>
                                         </div>
@@ -142,6 +149,18 @@
 <script th:src="@{/js/Chart.bundle.js}"></script>
 <script th:src="@{/js/chart.js}"></script>
 <script th:src="@{/js/app.js}"></script>
+<script th:inline="javascript">
+$(document).ready(function () {
+	   // var dob = "2000-10-01";//[[${rdv.patient.dateOfBirth}]];
+	    var dob = [[${rdv.patient.dateOfBirth}]] ; 
+	  	
+		dob = new Date(dob);
+		var today = new Date();
+		var age = Math.floor((today-dob) / (365.25 * 24 * 60 * 60 * 1000));
+		$("#age").text(age);
+		
+});
+</script>
 
 </body>
 
