--- a/src/main/resources/templates/med/rdv-details.html
+++ b/src/main/resources/templates/med/rdv-details.html
@@ -58,26 +58,27 @@
                                         </div>
                                         <div class="col-md-7">
                                             <ul class="personal-info">
-                                                <li><h4 class="user-name" >Cristina Groves</h4></li>
+                                                 <li><h4 class="user-name" th:text="${rdv.patient.firstName+' '+rdv.patient.LastName}"></h4></li>
                                                 <li>
                                                     <span class="title">Age:</span>
-                                                    <span class="text">26</span>
+                                                    <span class="text" id="age"></span>
                                                 </li>
                                                 <li>
-                                                    <span class="title">Gender:</span>
-                                                    <span class="text">Female</span>
+                                                    <span class="title">Sexe:</span>
+                                                    <span class="text" th:text="${rdv.patient.sex}"></span>
                                                 </li>
                                                 <li>
-                                                    <span class="title">Phone:</span>
-                                                    <span class="text"><a href="#">770-889-6484</a></span>
+                                                    <span class="title">Téléphone:</span>
+                                                    <span class="text"><a th:text="${rdv.patient.phoneNumber}"></a></span>
                                                 </li>
                                                 <li>
                                                     <span class="title">Email:</span>
-                                                    <span class="text"><a href="#">cristinagroves@example.com</a></span>
+                                                    <span class="text"><a th:text="${rdv.patient.phoneNumber}"></a></span>
                                                 </li>
                                                 <li>
                                                     <span class="title">Address:</span>
-                                                    <span class="text">714 Burwell Heights Road, Bridge City, TX, 77611</span>
+                                                    <span class="text" th:text="${rdv.patient.adress}"></span>
+                                                	
                                                 </li>
                                             </ul>
                                         </div>
@@ -248,6 +249,19 @@
                     $(btn).parent().fadeOut();
          }       
     </script>
+    
+<script th:inline="javascript">
+$(document).ready(function () {
+	   // var dob = "2000-10-01";//[[${rdv.patient.dateOfBirth}]];
+	    var dob = [[${rdv.patient.dateOfBirth}]] ; 
+	  	
+		dob = new Date(dob);
+		var today = new Date();
+		var age = Math.floor((today-dob) / (365.25 * 24 * 60 * 60 * 1000));
+		$("#age").text(age);
+		
+});
+</script>
 </body>
 
 
